# haskell-programming-from-first-principles

./: README.md  ReaderPractice.hs  chapter-1.hs  chapter-10.hs  chapter-11.hs  chapter-12.hs  chapter-13.hs  chapter-14.hs  chapter-15.hs  chapter-16.hs  chapter-17.hs  chapter-18.hs  chapter-19.hs  chapter-2.hs  chapter-20.hs  chapter-21.hs  chapter-22.hs  chapter-23.hs  chapter-24.hs  chapter-3.hs  chapter-4.hs  chapter-5.hs  chapter-6.hs  chapter-7.hs  chapter-8.hs  chapter-9.hs  ciper.hs  determineTheTypes.hs  haskell-programming-from-first-principles.cabal  learn.hs  typeInference1.hs
hangman/: hangman.cabal
hangman/src/: Main.hs
hangman/test/: tests.hs
morse/: morse.cabal
morse/src/: Main.hs  Morse.hs
morse/tests/: chapter-14.hs  tests.hs
shawty/: shawty.cabal
shawty/app/: Main.hs
