name:                haskell-programming-from-first-principles
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/FIXME
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  ghc-options:       -Wall -fwarn-tabs
  build-depends:     base >= 4.7 && < 5
                   , hspec
                   , containers
                   , QuickCheck
  hs-source-dirs:    ./
  default-language:  Haskell2010