name: shawty
version: 0.1.0.0
synopsis: URI shortener

description: Please see README.md
homepage: http://github.com/
license: BSD3
license-file: LICENSE
author: Suvrat Apte
maintainer: suvratapte@gmail.com
copyright: 2021, Suvrat Apte
category: Web
build-type: Simple
cabal-version: >=1.10

executable shawty
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded
  build-depends:  base
                , bytestring
                , hedis
                , mtl
                , network-uri
                , random
                , scotty
                , semigroups
                , text
                , transformers
  default-language: Haskell2010